# git-remote-codecommit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh
.github/workflows/: release.yml
src/: main.rs
