[package]
name = "git-remote-codecommit"
description = "Unofficial AWS CodeCommit Git credential helper in Rust"
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/bartleboeuf/git-remote-codecommit"

[dependencies]
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.4"
aws-types = "1.3.7"
chrono = "0.4.41"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
url = "2.5.4"
urlencoding = "2.1.3"
tokio = { version = "1.46.1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
debug = false
overflow-checks = false
incremental = false

# Add this section for better dependency optimization
[profile.release.package."*"]
opt-level = 3

# Used only on Windows to build the vcpkg dependencies
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
# The revision of the vcpkg repository to use
# https://github.com/microsoft/vcpkg/tags
rev = "2024.02.14"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dev-dependencies = ["openssl" ] }